--- a/static/css/myblog.css
+++ b/static/css/myblog.css
@@ -112,3 +112,19 @@
   visibility: visible;
   opacity: 1;
 }
+
+  .animated-list li {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 0.6s ease forwards;
+    animation-delay: calc(0.2s * var(--i));
+    list-style: none;
+    margin-bottom: 0.5rem;
+  }
+
+  @keyframes fadeInUp {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
