--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-{% include "includes/header.html" %}
+
 
 <div class="grid-container">
     <div class="grid-x align-center" style="margin-top: 3rem; margin-bottom: 3rem;">
@@ -23,7 +23,7 @@
                     padding: 1.2rem 1.5rem;
                     text-align: center;
                 ">
-                    <h4 style="margin: 0; font-weight: 600; font-size: 1.3rem;">Acceso de Usuario</h4>
+                    <h4 style="margin: 0; font-weight: 600; font-size: 1.3rem;">Acceso para Administradores</h4>
                 </div>
 
                 <!-- Cuerpo del formulario -->
@@ -109,7 +109,7 @@
                             </button>
                         </div>
 
-                        <!-- Botón Registrar (secundario) 
+                        <!-- Botón Registrar (secundario)
                         <div class="cell medium-12" style="margin-top: 1rem; text-align: center;">
                             <a href="#" style="
                                 display: block;
